created audio system to add background and hit effects

--- a/dev/Makefile
+++ b/dev/Makefile
@@ -1,6 +1,6 @@
 CC		= g++
 CFLAGS	= -g -Iinclude
-LIBS	= -lglfw -ldl
+LIBS	= -lglfw -ldl -lSDL2main -lSDL2 -lSDL2_mixer
 
 SOURCE	= $(wildcard src/*.cpp src/*.c)
 
